<resources>
    <string name="app_name">Alkalogdroid</string>
    <string name="app_version">v1.7</string>
    <string name="scan">Scan</string>
    <string name="settings">Nastavení</string>
    <string name="title_activity_setup">Nastavení</string>
    <string name="apply">Aplikuj změny</string>
    <string name="service_url">Service URL</string>
    <string name="ok">OK</string>
    <string name="cancel">Zrušit</string>
    <string name="canceled">Zrušeno</string>
    <string name="barcode_scan">Načti čárový kód</string>
    <string name="barcode_bad_format">Unknown barcode format %s</string>
    <string name="barcode_unknown_number">Unknown barcode value %d</string>
    <string name="food_select">Vyberte datum</string>
    <string name="date_format">d.M.yyyy</string>
    <string name="time_format">hh:mm</string>
    <string name="datetime_format">d.M.yyyy hh:mm</string>
    <string name="error">chyba</string>
    <string name="error_accept">Beru na vědomí</string>
    <string name="barcode_timeout">Timeout čtečky čárového kódu.</string>
    <string name="barcode_error">Chyba při čtení čárového kódu.</string>
    <string name="camera_number">Číslo kamery</string>
    <string name="register">Registrace</string>
    <string name="user_register_title">Vložte uživatelské jméno</string>
    <string name="unregister">Odregistrace</string>
    <string name="log_consf_ok">Přihlášení k občerstvení bylo úspěšné.</string>
    <string name="log_consf_nothink">Není co jíst.</string>
    <string name="log_consf_select">Vyber občerstvení</string>
    <string name="log_consf_error">Chyba při výběru občerstvení.</string>
    <string name="show_ok_tittle">Info</string>
    <string name="log_glass_ok">Sklenka úspěšně nalita.</string>
    <string name="log_glass_error">Chyba při nalévání sklenky.</string>
    <string name="register_ok">Registrace uživatel proběhla v pořádku.</string>
    <string name="register_error">Chyba při registraci uživatele.</string>
    <string name="unregister_ok">Registrace byla zrušena.</string>
    <string name="unregister_error">Chyba při rušení registrace</string>
    <string name="title_activity_log">log</string>
    <string name="scan_a_barcode">Načtěte čárový kód</string>
    <string name="ext_menu_title">Jiná činnost</string>
    <string name="drink_half">Půlsklenka</string>
    <string name="drink_bottle">Celá lahev</string>
    <string name="enable_web">Povolit webové rozhraní</string>
    <string name="allow_web_access_ok">Vstup do webového rozhraní povolen.</string>
    <string name="allow_web_access_error">Chyba při povolování webového rozhraní.</string>
    <string name="simple_log_title">Aktuální spotřeba</string>
    <string name="simple_log_text">skleničky : %d\njídlo : %d</string>
    <string name="log_unknown_item_line_1">neznámá</string>
    <string name="log_unknown_item_line_2">položka</string>
    <string name="log_food">Občerstvení</string>
    <string name="log_error">Chyba při načítání záznamů o konzumaci.</string>
    <string name="update">Aktualizace</string>
    <string name="update_file_url">http://bonisch.com/android/alkalogdroid.txt</string>
    <string name="update_actual">Apka je aktuální. Nic lepšího nemáme.</string>
    <string name="update_info">Je k dispozici nová verze. Bude spuštěn internetový prohlížeč s požadavkem na stažení instalačního balíčku. Ten je třeba po stažení nainstalovat.</string>
    <string name="about">O aplikaci</string>
    <string name="action_settings">Settings</string>
    <string name="bottle_owner">Vlastník</string>
    <string name="vintage">Ročník</string>
    <string name="bootle_type">Typ flašky</string>
    <string name="price">Cena</string>
    <string name="store_bottle">Naskladnit</string>
    <string name="end">Konec</string>
    <string name="loading">Načítám ...</string>
    <string name="bottle_store_ok">Láhev byla úspěšně naskladněna.</string>
    <string name="bottle_store_err">Chyba při naskladnění.</string>
    <string name="bottle_delete_ok">Láhev byla odstraněna ze skladu.</string>
    <string name="bottle_delete_err">Chyba při odstranění lahve ze skladu.</string>
    <string name="buy_food">Nákup občerstvení.</string>
    <string name="buy_food_ok">Nákup občerstvení byl uspěžně zaznamenán, dobrou chuť</string>
    <string name="buy_food_err">Nákup občerstvení se nepovedlo uložit</string>
    <string name="buy_food_undo_select">Vyber občerstvení k odstranění.</string>
    <string name="buy_food_undo_nothink">Není co odstraňovat.</string>
    <string name="buy_food_undo_ok">Občerstvení bylo úspěšně odstraněno.</string>
    <string name="buy_food_undo_err">Chyba při odstranění občerstvení.</string>
    <string name="restapi_http_error">Chyba %d.</string>
    <string name="expert_mode">Nebezpečné funkce</string>
    <string name="normal_mode">Funkce pro bělochy</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="num_of_items">Počet položek</string>
    <string name="adminweb">Webové rozhraní</string>

    <!--
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    -->
</resources>
